--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -175,23 +175,24 @@
 
         <div class="row">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col-lg-5 d-flex align-items-stretch" style="margin-left: 5%;">
+            
             <div class="info">
               <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <!--<i class="bi bi-geo-alt"></i>-->
+                <h4 class="bi bi-geo-alt"> Ubicación:</h4>
                 <p>Av. Canonigo Ramos, Ecuador, Riobamba, RB 535022</p>
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>greenpoint7064@gmail.com</p>
+                <!--<i class="bi bi-envelope"></i>-->
+                <h4 class="bi bi-envelope"> Email:</h4>
+                <p>greenpoint7064&#64;gmail.com</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <!--<i class="bi bi-phone"></i>-->
+                <h4 class="bi bi-phone"> Llámanos:</h4>
                 <p>+593 99 401 1067</p>
               </div>
 
@@ -199,7 +200,7 @@
             </div>
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" style="justify-content: right; margin-left: -10%;">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -234,7 +235,7 @@
     
             <div class="section-title">
               <h2>Equipo</h2>
-              <p>Quienes hicieron posible GreenPoint</p>
+              <p>¿Quienes hicieron posible GreenPoint?</p>
             </div>
     
             <div class="row">
@@ -307,7 +308,7 @@
             <br><br>
             <p>
               <strong>Teléfono:</strong> +593 99 401 1067<br>
-              <strong>Email:</strong> greenpoint7064@gmail.com<br>
+              <strong>Email:</strong> greenpoint7064&#64;gmail.com<br>
             </p>
           </div>
         </div>
