--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -68,7 +68,7 @@
                       <div class="col-12 form-group">
                         <label for="email" class="form-label" style="font-size: 14px;">Correo electrónico</label>
                         <div class="input-group has-validation">
-                          <span class="input-group-text" id="inputGroupPrepend">@</span>
+                          <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
                           <input type="email" name="username" [(ngModel)]="email" class="form-control" id="email" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Ingrese su correo electrónico.</div>
                         </div>
