--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -91,7 +91,7 @@
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="email" class="form-label" style="font-size: 14px;">Correo Electrónico</label>
                         <div class="input-group has-validation">
-                          <span class="input-group-text" id="inputGroupPrepend">@</span>
+                          <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
                           <input type="email" [(ngModel)]="email" name="email" class="form-control" id="email" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Debes ingresar tu correo electrónico!</div>
                         </div>
@@ -191,7 +191,7 @@
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="email" class="form-label" style="font-size: 14px;">Correo Electrónico</label>
                         <div class="input-group has-validation">
-                          <span class="input-group-text" id="inputGroupPrepend">@</span>
+                          <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
                           <input type="email" [(ngModel)]="email" name="email" class="form-control" id="email" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Debes ingresar tu correo electrónico!</div>
                         </div>
@@ -298,7 +298,7 @@
                         <p>GreenPoint puede suspender o terminar tu cuenta si violas estos términos y condiciones o si se detecta actividad fraudulenta.</p>
                         
                         <h6>9. Contacto</h6>
-                        <p>Si tienes preguntas o comentarios sobre estos términos y condiciones, puedes contactarnos a través del soporte de GreenPoint en greenpoint7064@gmail.com o 0994011067.</p>
+                        <p>Si tienes preguntas o comentarios sobre estos términos y condiciones, puedes contactarnos a través del soporte de GreenPoint en greenpoint7064&#64;gmail.com o 0994011067.</p>
                       </div>
                     </ng-template>
                     </p-dialog>
