Prototipo sin conexion

--- a/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
+++ b/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
@@ -78,7 +78,7 @@
                     </th>
                     <th>
                         <div class="flex align-items-center">
-                            Acción
+                            Canjear
                         </div>
                     </th>
                 </tr>
@@ -100,7 +100,7 @@
                          -->
                         <p-button
                         type="button"
-                        icon="pi pi-pencil"
+                        icon="pi pi-money-bill"
                         styleClass="p-button-text"
                         (click)="ModalInformacion(oferta)"
                       ></p-button>
