--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Register - NiceAdmin Bootstrap Template</title>
+  <title>Registro de usuarios</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,7 +50,7 @@
                         
                         <div class="flex align-items-center">
                             <p-radioButton name="negocio" value="negocio" [(ngModel)]="tipo" inputId="tipo2" (onClick)="ngOnInit()"></p-radioButton>
-                            <label for="tipo2" class="ml-2" style="font-size: 14px;">Negocio</label>
+                            <label for="tipo2" class="ml-2" style="font-size: 14px;">Punto Verde</label>
                         </div>
                       </div> 
                       <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;" *ngIf="tipo === ''">
