--- a/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
+++ b/src/app/ModuloNegocio/pg-gestionofertas/pg-gestionofertas.component.html
@@ -136,12 +136,11 @@
           <ng-template pTemplate="content">
             
             <form #newOfertaform="ngForm" (ngSubmit)="RegistrarNuevo(newOfertaform)" class="row g-3 needs-validation" novalidate style="margin-top: 0px;">
-
               <div class="col-12 form-group" style="margin-top: -10px;">
                 <label for="newoferta" class="form-label" style="font-size: 14px;">Oferta nueva</label>
                 <div class="input-group has-validation">
                   <input type="text" [(ngModel)]="newoferta" name="newoferta" class="form-control" id="newoferta" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
-                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar un correo electrónico!</div>
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una Oferta!</div>
                 </div>
               </div>
 
@@ -167,9 +166,11 @@
                     <input type="number" [(ngModel)]="gc_necesarios" name="gc_necesarios" class="form-control"   id="gc_necesarios" required style="font-size: 13px;" min="1" max="1000" >
                     <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una cantidad reciclada valida (min 1 - max 1000)!</div>
                   </div>
+                  
               </div>
+              <p style="font-size: 13px;">&nbsp;La duracion minima de una oferta debe ser <span style="color: green;">minimo una semana</span></p>
               
-              <div class="col-12" style="margin-top: 10px;">
+              <div class="col-12" style="margin-top: 0px;">
                 <button class="btn btn-primary w-100" type="submit">Registrar</button>
               </div>
             </form>
