--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -183,14 +183,10 @@
             <div class="row">
 
               <!-- Sales Card -->
-              <div class="col-xxl-4 col-md-6">
+              <div class="col-xxl-4 col-sm-4">
                 <div class="card info-card sales-card">
-
-
-
                   <div class="card-body">
-                    <h5 class="card-title">Códigos <span>| Todos</span></h5>
-
+                    <h5 class="card-title">Códigos <span>|<br> Todos</span></h5>
                     <div class="d-flex align-items-center">
                       <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                         <i class="bi bi-qr-code"></i>
@@ -200,19 +196,14 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
-              </div><!-- End Sales Card -->
+              </div>
 
               <!-- Revenue Card -->
-              <div class="col-xxl-4 col-md-6">
+              <div class="col-xxl-4 col-sm-4">
                 <div class="card info-card revenue-card">
-
-
-
                   <div class="card-body">
                     <h5 class="card-title">GreenCoins <span>| Total</span></h5>
-
                     <div class="d-flex align-items-center">
                       <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                         <i class="bi bi-currency-dollar"></i>
@@ -222,20 +213,14 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
-              </div><!-- End Revenue Card -->
+              </div>
 
               <!-- Customers Card -->
-              <div class="col-xxl-4 col-xl-12">
-
+              <div class="col-xxl-4 col-sm-4">
                 <div class="card info-card customers-card">
-
-
-
                   <div class="card-body">
                     <h5 class="card-title">Ofertas <span>| Disponibles</span></h5>
-
                     <div class="d-flex align-items-center">
                       <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                         <i class="bi bi-plus-slash-minus"></i>
@@ -244,11 +229,10 @@
                         <h6>{{this.cant_ofer+" "}}<span style="font-size: 20px;"></span></h6>
                       </div>
                     </div>
-
                   </div>
                 </div>
+              </div>
 
-              </div><!-- End Customers Card -->
 
               <!-- Reports -->
               <div class="col-12">
