--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -246,7 +246,7 @@
                   <div class="member-info">
                     <h4>Anderson Allaica</h4>
                     <span>Desarrollador</span>
-                    <p>7071</p>
+                    <p>Espoch</p>
     
                   </div>
                 </div>
@@ -258,7 +258,7 @@
                   <div class="member-info">
                     <h4>Cristhian Totoy</h4>
                     <span>Desarrollador</span>
-                    <p>7064</p>
+                    <p>Espoch</p>
     
                   </div>
                 </div>
@@ -268,9 +268,9 @@
                 <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
                   <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
                   <div class="member-info">
-                    <h4>Alexis de la Cruz</h4>
+                    <h4>Jonathan Oviedo</h4>
                     <span>Desarrollador</span>
-                    <p>6853</p>
+                    <p>Espoch</p>
     
                   </div>
                 </div>
