--- a/src/app/ModuloNegocio/pg-registroreciclaje/pg-registroreciclaje.component.html
+++ b/src/app/ModuloNegocio/pg-registroreciclaje/pg-registroreciclaje.component.html
@@ -37,7 +37,7 @@
                       <label for="email" class="form-label" style="font-size: 14px;">Correo electrónico del ciudadano</label>
                       <div class="input-group has-validation">
                         <span class="input-group-text" id="inputGroupPrepend">&#79;</span>
-                        <input type="email" [(ngModel)]="email" name="email" class="form-control" id="email" required style="font-size: 13px;" placeholder="ciudadano@gmail.com">
+                        <input type="email" [(ngModel)]="email" name="email" class="form-control" id="email" required style="font-size: 13px;" placeholder="ciudadano@gmail.com" pTooltip="Introduce el correo del ciudadano" [showDelay]="1000" [hideDelay]="1000" tooltipPosition="right"/>
                         <div class="invalid-feedback floating-invalid-feedback">Debes ingresar un correo electrónico!</div>
                       </div>
                     </div>
@@ -45,7 +45,17 @@
                     <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="puntosverdes" class="form-label" style="font-size: 14px;">Punto verde donde se recicla</label>
                         <div class="input-group has-validation">
-                          <p-dropdown [(ngModel)]="selectedPuntoVerde" name="puntoVerde" [options]="puntosverdes" optionLabel="name" [style]="{ width: '100%' }"></p-dropdown>
+                          <p-dropdown 
+                            [(ngModel)]="selectedPuntoVerde" 
+                            name="puntoVerde" 
+                            [options]="puntosverdes" 
+                            optionLabel="name" 
+                            [style]="{ width: '100%' }"
+                            pTooltip="Selecciona el punto verde donde registrar" 
+                            [showDelay]="1000" 
+                            [hideDelay]="1000" 
+                            tooltipPosition="right">
+                          </p-dropdown>
                           <div class="invalid-feedback floating-invalid-feedback">Debes seleccionar el punto verde donde registra!</div>
                         </div>
                     </div>
@@ -53,15 +63,27 @@
                     <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="materiales" class="form-label" style="font-size: 14px;">Tipo de material reciclado</label>
                         <div class="input-group has-validation">
-                          <p-dropdown [(ngModel)]="selectedMaterial" name="material" [options]="materiales" optionLabel="name" [style]="{ width: '100%' }"></p-dropdown>
+                          <p-dropdown 
+                            [(ngModel)]="selectedMaterial" 
+                            name="material" 
+                            [options]="materiales" 
+                            optionLabel="name" 
+                            [style]="{ width: '100%' }"
+                            pTooltip="Selecciona el tipo de material reciclado" 
+                            [showDelay]="1000" 
+                            [hideDelay]="1000" 
+                            tooltipPosition="right">
+                          </p-dropdown>
                           <div class="invalid-feedback floating-invalid-feedback">Debes seleccionar el tipo de material reciclado!</div>
                         </div>
+                        
                       </div>
 
                     <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="cantidad" class="form-label" style="font-size: 14px;">Cantidad bolsas recicladas (35cm x 40cm)</label>
                         <div class="input-group has-validation">
-                          <input type="number" [(ngModel)]="cantidad" name="cantidad" class="form-control"   id="cantidad" required style="font-size: 13px;" min="1" max="100" >
+                          <input type="number" [(ngModel)]="cantidad" name="cantidad" class="form-control" id="cantidad" required style="font-size: 13px;" min="1" max="100" pTooltip="Introduce una cantidad entre 1 y 100" [showDelay]="1000" [hideDelay]="1000" tooltipPosition="right"/>
+
                           <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una cantidad reciclada valida (min 1 - max 100)!</div>
                         </div>
                     </div>
@@ -69,7 +91,7 @@
                     <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="email" class="form-label" style="font-size: 14px;">Descripción (opcional)</label>
                         <div class="input-group has-validation">
-                          <input type="text" [(ngModel)]="descripcion" name="descripcion" class="form-control" id="descripcion" maxlength="200" required style="font-size: 13px;">
+                          <input type="text" [(ngModel)]="descripcion" name="descripcion" class="form-control" id="descripcion" maxlength="200" required style="font-size: 13px;" pTooltip="Introduce una descripción (máximo 200 caracteres)" [showDelay]="1000" [hideDelay]="1000" tooltipPosition="right"/>
                         </div>
                     </div>
                     
