--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -141,6 +141,12 @@
         </a>
       </li><!-- End Forms Nav -->
 
+      <li class="nav-item">
+        <a class="nav-link collapsed" (click)="SeccionPuntosCriticos($event)" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-journal-text"></i><span>Reportar Puntos Críticos</span>
+        </a>
+      </li><!-- End Forms Nav -->
+
       <li class="nav-heading">Páginas</li>
 
       <li class="nav-item">
@@ -315,6 +321,10 @@
 
     <div *ngIf="seccion === '4'">
       <app-pg-historialciudadano></app-pg-historialciudadano>
+    </div>
+
+    <div *ngIf="seccion === '5'">
+      <app-pg-puntoscriticos></app-pg-puntoscriticos>
     </div>
 
   <!-- Contenido para FAQ -->
