--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -190,9 +190,14 @@
 
                   <div class="card-body">
                     <h5 class="card-title">Códigos <span>| Todos</span></h5>
-
+                  
                     <div class="d-flex align-items-center">
-                      <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <div 
+                        class="card-icon rounded-circle d-flex align-items-center justify-content-center"
+                        pTooltip="Esta es la cantidad de códigos QR que tienes canjeados"
+                        tooltipPosition="top"
+                        [showDelay]="1000"
+                        [hideDelay]="1000">
                         <i class="bi bi-qr-code"></i>
                       </div>
                       <div class="ps-3">
@@ -200,21 +205,22 @@
                       </div>
                     </div>
                   </div>
-
+                  
                 </div>
               </div><!-- End Sales Card -->
 
               <!-- Revenue Card -->
               <div class="col-xxl-4 col-md-6">
                 <div class="card info-card revenue-card">
-
-
-
                   <div class="card-body">
                     <h5 class="card-title">GreenCoins <span>| Total</span></h5>
-
                     <div class="d-flex align-items-center">
-                      <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <div 
+                        class="card-icon rounded-circle d-flex align-items-center justify-content-center"
+                        pTooltip="Este es el total de GreenCoins que tienes para canjear ofertas"
+                        tooltipPosition="top"
+                        [showDelay]="1000"
+                        [hideDelay]="1000">
                         <i class="bi bi-currency-dollar"></i>
                       </div>
                       <div class="ps-3">
@@ -222,30 +228,29 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
               </div><!-- End Revenue Card -->
 
               <!-- Customers Card -->
               <div class="col-xxl-4 col-xl-12">
-
                 <div class="card info-card customers-card">
-
-
-
                   <div class="card-body">
                     <h5 class="card-title">Ofertas <span>| Disponibles</span></h5>
-
                     <div class="d-flex align-items-center">
-                      <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <div 
+                        class="card-icon rounded-circle d-flex align-items-center justify-content-center"
+                        pTooltip="Cantidad de ofertas disponibles para canjear"
+                        tooltipPosition="top"
+                        [showDelay]="1000"
+                        [hideDelay]="1000">
                         <i class="bi bi-plus-slash-minus"></i>
                       </div>
                       <div class="ps-3">
                         <h6>{{this.cant_ofer+" "}}<span style="font-size: 20px;"></span></h6>
                       </div>
                     </div>
-
                   </div>
+                  
                 </div>
 
               </div><!-- End Customers Card -->
@@ -321,7 +326,7 @@
       </section>
     </div>
 
-    <div *ngIf="seccion === '2'">
+    <div *ngIf="seccion === '2'" >
       <app-pg-canjeoofertas></app-pg-canjeoofertas>
     </div>
 
