--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -192,7 +192,7 @@
               <div class="col-xxl-4 col-sm-4">
                 <div class="card info-card sales-card">
                   <div class="card-body">
-                    <h5 class="card-title">Códigos <span>|Todos</span></h5>
+                    <h5 class="card-title">Códigos <span>|<br>Todos</span></h5>
                     <div class="d-flex align-items-center">
                       <div 
                         class="card-icon rounded-circle d-flex align-items-center justify-content-center"
